--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,21 @@ body,
     margin: 0;
     padding: 0;
     width: 100%;
+    background-color: #162438;
+}
+
+@media (max-width: 640px) {
+    #root {
+        height: auto;
+        min-height: 100%;
+    }
+}
+
+input {
+    background-color: transparent;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
 }
