--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,20 @@ img {
     max-width: 100%;
     height: auto;
 }
+
+.suggestions::-webkit-scrollbar {
+    width: 4px;
+}
+.suggestions::-webkit-scrollbar-track {
+    background: #1a2231;
+    border-radius: 6px;
+}
+
+.suggestions::-webkit-scrollbar-thumb {
+    background: #3a4454;
+    border-radius: 6px;
+}
+
+.suggestions::-webkit-scrollbar-thumb:hover {
+    background: #4a5465;
+}
